Fixed warning because using deprecated method (warning: [deprecation] newInstance() in Class has been deprecated) by replacing the method using this "clazz.getDeclaredConstructor().newInstance()"